--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
 <center>
   	<h3 class="btn btn-warning heading">AI DJ WEB APP
 	    <br>
-	    <span class="note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span class="note">NOTE - Change the wrist you're showing to the webcam to play a different song</span>
   	</h3>
     <div class="div_speed">
       <br>
       <h3 class="btn btn-danger" id="speed">Speed</h3>
     </div>
- 
+ <canvas></canvas>
   
 </center>
 
