--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body background="background.jpg">
 <center>
-  	<h3 class="btn btn-warning heading">AI DJ WEB APP
+  	<h3 class="btn btn-warning heading" id="heading">AI DJ WEB APP
 	    <br>
 	    <span class="note">NOTE - Change the wrist you're showing to the webcam to play a different song</span>
   	</h3>
