--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
-<body background="background.jpg">
+<body background="download.jpeg">
 <center>
   	<h3 class="btn btn-warning heading" id="heading">AI DJ WEB APP
 	    <br>
@@ -20,7 +20,7 @@
   	</h3>
     <div class="div_speed">
       <br>
-      <h3 class="btn btn-danger" id="speed">Speed</h3>
+      <h3 class="btn btn-danger" id="song_playing">Song Playing</h3>
     </div>
  <canvas></canvas>
   
